<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textColor="#FDFBFB"
        android:layout_margin="10dp"
        android:fontFamily="@font/fredoka_one"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_new_member">
    </TextView>
    <EditText
        android:autofillHints=""
        android:id="@+id/NameET"
        android:padding="10dp"
        android:background="@drawable/edittextbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:fontFamily="@font/actor"
        android:hint="@string/fullname"
        android:inputType="text"
        android:textColor="#f000"
        android:textColorHint="#f000">
    </EditText>
    <EditText
        android:id="@+id/EmailET"
        android:padding="10dp"
        android:background="@drawable/edittextbg"
        android:fontFamily="@font/actor"
        android:textColor="#f000"
        android:textColorHint="#f000"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="">
    </EditText>
    <EditText
        android:id="@+id/PhoneET"
        android:padding="10dp"
        android:background="@drawable/edittextbg"
        android:fontFamily="@font/actor"
        android:textColor="#f000"
        android:textColorHint="#f000"
        android:inputType="phone"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        android:autofillHints="">
    </EditText>
    <Button
        android:id="@+id/SaveBT"
        android:background="@drawable/buttonbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/save">

    </Button>
    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout

        android:layout_gravity="bottom"
        android:id="@+id/Contacts_ad_view_container"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>