<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/spicy_rice"
            android:text="@string/instali"
            android:textColor="#FDD835"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp">
        </TextView>

        <TextView
            android:id="@+id/date"
            android:fontFamily="@font/spicy_rice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FDD835"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:text="@string/date_time"
            android:textSize="20sp"
            android:layout_marginEnd="10dp">
        </TextView>
</LinearLayout>
    <TextView
        android:textColor="#FDFBFB"
        android:layout_margin="10dp"
        android:fontFamily="@font/fredoka_one"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_installments_plan">
    </TextView>



        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView"
            >

        </ListView>
    <FrameLayout
        android:id="@+id/View_ad_view_container"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>