<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="130sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/spicy_rice"
                android:text="@string/instali"
                android:textColor="#FDD835"
                android:textSize="25sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/spicy_rice"
                android:text="@string/date_time"
                android:textColor="#FDD835"
                android:textSize="20sp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/cardbg"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/StartNewInstallment"
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="#145977"
                app:cardCornerRadius="40dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/start_new_installment"
                    android:textColor="#FDFCFC"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ViewRunningInstallments"
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="#145977"
                app:cardCornerRadius="40dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/view_running_installment"
                    android:textColor="#F6F2F2"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/AddContacts"
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#145977"
                app:cardCornerRadius="40dp"
                app:cardElevation="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/add_members"
                    android:textColor="#FAF6F6"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    <FrameLayout

        android:layout_gravity="bottom"
        android:id="@+id/Main_ad_view_container"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>